--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
-        "seed": "node seed.js"
+        "seed": "node seed.js",
+        "build": "echo \"No build step for backend\""
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
