--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "nodemailer": "^8.0.0",
+        "pg": "^8.18.0",
+        "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.3",
         "sqlite3": "^5.0.2"
     },
